Trying to seperate logic

--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
     "content_scripts" : [
         {
             "matches" : ["https://dashboard.heroku.com/*"],
-            "js" : ["index.js"]
+            "js" : ["index.js", "helpers.js"]
         }
     ],
     "action" : {
